--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
+    "axios": "0.19.2",
     "font-awesome": "4.7.0",
     "prop-types": "15.7.2",
     "react": "16.8.0",
     "react-dom": "16.8.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "sweet-alert": "2.0.5",
+    "sweetalert": "2.1.2"
   },
   "devDependencies": {},
   "scripts": {
