--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prop-types": "15.7.2",
     "react": "16.8.0",
     "react-dom": "16.8.0",
+    "react-redux": "7.2.1",
     "react-scripts": "1.1.0",
+    "redux": "4.0.5",
     "sweet-alert": "2.0.5",
     "sweetalert": "2.1.2"
   },
