--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "font-awesome": "4.7.0",
     "prop-types": "15.7.2",
     "react": "16.8.0",
+    "react-addons-css-transition-group": "15.6.2",
     "react-dom": "16.8.0",
     "react-redux": "7.2.1",
+    "react-router-dom": "5.2.0",
+    "react-routes": "0.2.6",
     "react-scripts": "1.1.0",
     "redux": "4.0.5",
+    "redux-persist": "6.0.0",
     "sweet-alert": "2.0.5",
     "sweetalert": "2.1.2"
   },
